--- a/kubernetes/helm_charts/datapipeline_jobs/values.j2
+++ b/kubernetes/helm_charts/datapipeline_jobs/values.j2
@@ -625,6 +625,10 @@ rating:
       user.port = {{ redis_meta_user_port }}
       dialcode.port = {{ redis_meta_dialcode_port }}
     }
+    cloud_storage_type="{{ cloud_store }}"
+    aws_storage_key="{{ aws_storage_key }}"
+    aws_storage_secret="{{ aws_storage_secret }}"
+    aws_storage_container="{{ aws_storage_container }}"
 
   flink-conf: |+
     jobmanager.memory.flink.size: {{ flink_job_names['rating'].jobmanager_memory }}
