Update values.j2 s3 key added on rating

--- a/kubernetes/helm_charts/datapipeline_jobs/values.j2
+++ b/kubernetes/helm_charts/datapipeline_jobs/values.j2
@@ -626,8 +626,8 @@ rating:
       user.port = {{ redis_meta_user_port }}
       dialcode.port = {{ redis_meta_dialcode_port }}
     }
-  s3.access-key = {{ s3_storage_key }}
-  s3.secret-key = {{ s3_storage_secret }}
+  s3.access-key: {{ s3_storage_key }}
+  s3.secret-key: {{ s3_storage_secret }}
  
 
   flink-conf: |+
